--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
           <p>Added for Milestone 3:<br>
           <a href="https://vincenta44.github.io/tictactoe_react">React tictactoe deployed to github pages</a><br>
           <a href="requirement_gathering_notes.html">requirement_gathering_notes.html</a><br>
-          <a href="tests_examples">tests_examples.html</a>
+          <a href="tests_examples">tests_examples.html</a><br>
+          <a href="snake_game">React snake game</a><br>
+          <a href="http://vincenta44.github.io/snakeReactGame">React snake game deployed to github pages</a>
+          <a></a>
           </p>
           </div>
 
@@ -44,7 +47,7 @@
           <h3>TO DO: Milestone 3</h3>
           <ul>
             <li>Finish the react connect4 app tutorial and implement it as a turn based game</li>
-            <li>Create a snake game in react</li>
+            <li><strike>Create a snake game in react</strike></li>
             <li>Implement my games into react pages and create a website with react games (including a menu bar, home screen, 
             and screen for each game</li>
             <li>Work on a typescript and react project that resembles a blog website to post and read a timeline of posts</li>
@@ -57,8 +60,9 @@
             <li>Research and practice with testing and create tests for the taTrainer and other react apps</li>
             <li>Implement my react games into react pages and create a website with react games (including a menu bar, home screen, 
               and screen for each game)</li>
-            <li>Work with UI Design to syle my portfolio index and react game website</li>
+            <li>Work with UI Design to style my portfolio index and react game website</li>
             <li>Work with bootstrap</li>
+            <li>Add a game over and win option for the React snake game</li>
           </ul>
           </h3>
           </div>
