--- a/react_typescript.html
+++ b/react_typescript.html
@@ -4,6 +4,7 @@
         <meta charset="utf8">
         <style>
             code{
+                font-family: Verdana, Geneva, Tahoma, sans-serif;;
                 font-size: 14px;
                 border-color: #eeeeee;
                 color: black;
@@ -19,7 +20,7 @@
     <a href="https://www.typescriptlang.org/docs/handbook/typescript-tooling-in-5-minutes.html">https://www.typescriptlang.org/docs/handbook/typescript-tooling-in-5-minutes.html</a>
     <p>
         I edited the way the name is given into the greeter. User must now type in first, middle and 
-        last names and the scrips gets its data from that prompt.
+        last names and the scrips gets its data from that prompt. This has helped me get a better understanding of how typescript works in general and with HTML.
     </p><br>
 
     <p><strong>TicTacToe Tutorial for React:</strong></p>
@@ -44,10 +45,10 @@
     <a href="https://dev.to/mtliendo/build-connect4-in-react-334o">https://dev.to/mtliendo/build-connect4-in-react-334o</a>
     <p>Followed tutorial in order to get more practice with react. So far it has helped me with how to link files within React apps 
         <br>(NOT FINISHED TUTORIAL)</p>
-
+<br>
     <p><strong>Snake Game tutorial for React:</strong></p>
     <a href="https://dev.to/aligumustosun/making-a-snake-game-using-react-hooks-5606">https://dev.to/aligumustosun/making-a-snake-game-using-react-hooks-5606</a>
-    <p>Followed the tutorial to help me better understand how react works and is deployed</p>
+    <p>Followed the tutorial to help me better understand how react works and is deployed.</p>
 
     </body>
 </html>
