--- a/requirement_gathering_notes.html
+++ b/requirement_gathering_notes.html
@@ -4,12 +4,13 @@
         <meta charset="utf8">
         <style>
             body{
-                font-family:Georgia, 'Times New Roman', Times, serif;
+                font-family:Verdana, Geneva, Tahoma, sans-serif;
             }
             .heading{
                 text-align: center;
                 font-weight: bold;
                 border: solid;
+                padding: 3px;
             }
             .resources{
                 overflow: scroll;
@@ -55,8 +56,30 @@
         
         <h3>10 Techniques for Gathering Requirements</h3>
         <ol>
-            <li></li>
+            <li>One-one-one interviews</li>
+            <li>Group Interviews</li>
+            <li>Facilitated Sessions</li>
+            <li>Joint Applicaiton Development</li>
+            <li>Questionnaires</li>
+            <li>Prototyping</li>
+            <li>Use Cases</li>
+            <li>Following People Around</li>
+            <li>Request for Proposals</li>
+            <li>Brainstorming</li>
         </ol>
+
+        <h3>Things to keep in mind</h3>
+        <ul>
+            <li>Identify and involve a representative set of stakeholders</li>
+            <li>Seek breadth before depth</li>
+            <li>Iterate and clarify</li>
+            <li>Prioritize</li>
+            <li>Use the stakeholder's terminology</li>
+            <li>Employ KISS (keep it simple but be thorough)</li>
+            <li>Realize that you will never get a complete set of requirements up-front; some won't surface until the stakeholders have pieces of the solution that they can see and touch</li>
+            <li>Remember goals and objectives are not requirements</li>
+            <li>Requirements and constraints should drive the solution not the other way around</li>
+        </ul>
         
 
         <div class="resources"><h3>Resources:</h3
