--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
           <a href="tests_examples">tests_examples.html</a><br>
           <a href="snake_game">React snake game</a><br>
           <a href="http://vincenta44.github.io/snakeReactGame">React snake game deployed to github pages</a>
-          <a></a>
+          </p>
+          <p>Added for Final Submission:<br>
+            <a href="">taTrainer react app</a>
+
           </p>
           </div>
 
@@ -61,7 +64,7 @@
             <li>Implement my react games into react pages and create a website with react games (including a menu bar, home screen, 
               and screen for each game)</li>
             <li>Work with UI Design to style my portfolio index and react game website</li>
-            <li>Work with bootstrap</li>
+            <li><strike>Work with bootstrap</strike></li>
             <li>Add a game over and win option for the React snake game</li>
           </ul>
           </h3>
@@ -105,6 +108,12 @@
             <br>- Edited requirement_gathering_notes.html file
             <br>- Edited react_tyepscript.html to match what I have been doing
             <br>- Created snake_game react app from tutorial
+          <br><strong>#Sept. 28th</strong>
+            <br>- Started TATrainer app in local folder
+            <br>- Watched half of Dr. Barts Video
+          <br><strong>#Sept. 30th</strong>
+            <br>- Made major edits to the TATrainer react app
+            <br>- 
               
           </div>
         </body>
