--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           </p>
           <p>Added for Final Submission:<br>
             <a href="">taTrainer react app</a>
+            <a href="">Dice Roller react app</a>
 
           </p>
           </div>
@@ -113,7 +114,10 @@
             <br>- Watched half of Dr. Barts Video
           <br><strong>#Sept. 30th</strong>
             <br>- Made major edits to the TATrainer react app
-            <br>- 
+            <br>- Added Dice Rolling
+            <br>- Finished ta-trainer
+            <br>- Deployed ta-trainer to github page
+            <br>- Deployed dice to github pages
               
           </div>
         </body>
