fixed taTrainer react app github pages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="http://vincenta44.github.io/snakeReactGame">React snake game deployed to github pages</a>
           </p>
           <p>Added for Final Submission:<br>
-            <a href="">taTrainer react app</a>
+            <a href="https://vincenta44.github.io/TATrainer/">taTrainer react app</a>
             <a href="">Dice Roller react app</a>
 
           </p>
